@@ -1,2 +1,0 @@
-Sass::Plugin.options[:template_location] = File.join(RAILS_ROOT, "app/stylesheets")
-Sass::Plugin.options[:css_location] = File.join(RAILS_ROOT, "public/stylesheets")
