@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Wed, Mar 26, 2009
+---------------------------------------------------------------------
+- Refactored custom Rails initializers.
+
 Tue, Mar 25, 2009
 ---------------------------------------------------------------------
 - More work on [Edit Opportunity] and its specs.
